crates/symbolicator-service/tests/integration/snapshots/integration__sourcemap__e2e_source_no_header.snap
---
source: crates/symbolicator-service/tests/integration/sourcemap.rs
assertion_line: 579
expression: response.unwrap()
---
stacktraces:
  - frames:
      - function: onFailure
        filename: test.js
        module: server/pages/test
        abs_path: "app:///_next/server/pages/test.js"
        lineno: 5
        colno: 11
        pre_context:
          - "var makeAFailure = (function() {"
          - "  function onSuccess(data) {}"
          - ""
          - "  function onFailure(data) {"
        context_line: "    throw new Error('failed!');"
        post_context:
          - "  }"
          - ""
          - "  function invoke(data) {"
          - "    var cb = null;"
          - "    if (data.failed) {"
        in_app: true
        data:
          sourcemap: "app:///_next/server/pages/test.min.js.map"
          resolved_with: release
          symbolicated: true
raw_stacktraces:
  - frames:
      - function: e
        abs_path: "app:///_next/server/pages/_error.js"
        lineno: 1
        colno: 64
        context_line: "var makeAFailure=function(){function n(n){}function e(n){throw new Error(\"failed!\")}function r(r){var i=null;if(r.failed){i=e}else{i=n}i(r)} {snip}"
        post_context:
          - "//# sourceMappingURL=test.min.js.map"
scraping_attempts:
  - url: "app:///_next/server/pages/_error.js"
    result: not_attempted
  - url: "app:///_next/server/pages/test.min.js.map"
    result: not_attempted

