crates/symbolicator-service/tests/integration/snapshots/integration__sourcemap__malformed_abs_path.snap
---
source: crates/symbolicator-service/tests/integration/sourcemap.rs
assertion_line: 228
expression: response.unwrap()
---
stacktraces:
  - frames:
      - status: invalid_abs_path
        filename: test.js
        abs_path: http//example.com/test.min.js
        lineno: 1
        colno: 1
raw_stacktraces:
  - frames:
      - filename: test.js
        abs_path: http//example.com/test.min.js
        lineno: 1
        colno: 1

