crates/symbolicator-service/tests/integration/snapshots/integration__sourcemap__source_expansion.snap
---
source: crates/symbolicator-service/tests/integration/sourcemap.rs
assertion_line: 222
expression: response.unwrap()
---
stacktraces:
  - frames:
      - filename: foo.js
        abs_path: "http://example.com/foo.js"
        lineno: 1
        colno: 1
        context_line: h
        post_context:
          - e
          - l
          - l
          - o
          - " "
      - filename: foo.js
        abs_path: "http://example.com/foo.js"
        lineno: 4
        colno: 1
        pre_context:
          - h
          - e
          - l
        context_line: l
        post_context:
          - o
          - " "
          - w
          - o
          - r
raw_stacktraces:
  - frames:
      - filename: foo.js
        abs_path: "http://example.com/foo.js"
        lineno: 1
        colno: 1
        context_line: h
        post_context:
          - e
          - l
          - l
          - o
          - " "
      - filename: foo.js
        abs_path: "http://example.com/foo.js"
        lineno: 4
        colno: 1
        pre_context:
          - h
          - e
          - l
        context_line: l
        post_context:
          - o
          - " "
          - w
          - o
          - r

