crates/symbolicator-service/tests/integration/snapshots/integration__sourcemap__sourcemap_embedded_source_expansion.snap
---
source: crates/symbolicator-service/tests/integration/sourcemap.rs
expression: response.unwrap()
---
stacktraces:
  - frames:
      - status: missing_sourcemap
        function: "function: \"HTMLDocument.<anonymous>\""
        filename: index.html
        abs_path: "http://example.com/index.html"
        lineno: 283
        colno: 17
      - status: symbolicated
        function: add
        filename: file1.js
        abs_path: file1.js
        lineno: 3
        colno: 9
        pre_context:
          - "function add(a, b) {"
          - "\t\"use strict\";"
        context_line: "\treturn a + b; // fôo"
        post_context:
          - "}"
raw_stacktraces:
  - frames:
      - function: "function: \"HTMLDocument.<anonymous>\""
        filename: index.html
        abs_path: "http://example.com/index.html"
        lineno: 283
        colno: 17
      - filename: embedded.js
        abs_path: "http://example.com/embedded.js"
        lineno: 1
        colno: 39
        context_line: "function add(a,b){\"use strict\";return a+b}function multiply(a,b){\"use strict\";return a*b}function divide(a,b){\"use strict\";try{return multip {snip}"
        post_context:
          - "//# sourceMappingURL=embedded.js.map"

