crates/symbolicator-service/tests/integration/snapshots/integration__sourcemap__sourcemap_nofiles_source_expansion.snap
---
source: crates/symbolicator-service/tests/integration/sourcemap.rs
assertion_line: 295
expression: response.unwrap()
---
stacktraces:
  - frames:
      - function: add
        abs_path: "app:///nofiles.js"
        lineno: 3
        colno: 9
        pre_context:
          - "function add(a, b) {"
          - "\t\"use strict\";"
        context_line: "\treturn a + b; // fôo"
        post_context:
          - "}"
        data:
          sourcemap: "app:///nofiles.js.map"
          resolved_with: release
raw_stacktraces:
  - frames:
      - abs_path: "app:///nofiles.js"
        lineno: 1
        colno: 39
        context_line: "function add(a, b) {"
        post_context:
          - "  'use strict';"
          - "  return a + b;"
          - "}"
          - "function multiply(a, b) {"
          - "  'use strict';"

